GLideNUI-wtl: Add language translation for emulation tab

--- a/translations/wtl/gliden64_de.Lang
+++ b/translations/wtl/gliden64_de.Lang
@@ -61,3 +61,40 @@
 #2036# "Bilineare Filterung: Texturen verwenden standard PC-Style bilineare Filtering.\nN64-Style 3 point: Texturen werden ähnlich dem N64 gefiltert. Das Resultat sieht nicht so weich aus, entspricht aber ehr dem N64."
 #2046# "Deaktivieren"
 #2050# "Sprache:"
+
+/*********************************************************************************
+* Emulation Tab                                                                  *
+*********************************************************************************/
+#3000# "Spieleinstellungen verwenden"
+#3001# "Wenn aktiviert, werden alle nicht standardmäßigen Einstellungen für jedes Spiel einzeln gespeichert.\nWenn ein Spiel läuft, werden die Einstellungen für das aktuell laufende Spiel angezeigt und gespeichert.\nHinweis: GLideN64 enthält bereits Einstellungen für die optimale Leistung der meisten Spiele. Sei vorsichtig wenn du Optionen auf den Registerkarten 'Emulation' und 'Frame-Buffer' änderst.\n[Empfehlung: Ausgewählt]"
+#3002# "Aktiviere N64-Style Mip-Mapping"
+#3003# "Das N64 verwendet eine einzigartige Art des Mip-Mappings, welche nur schwer auf einem PC nachzustellen ist. Wenn diese Einstellung ausgewählt ist wird N64 Mip-Mapping emuliert. Wenn diese Einstellung nicht ausgewählt ist sehen bei einigen Spielen Texturen in der Ferne schärfer aus.\n[Empfehlung: Ausgewählt]"
+#3004# "Aktiviere Per-Pixel Lighting (Bessere Qualität, nur HLE)"
+#3005# "Das N64 berechnet die Beleuchtung per Vertex. Diese Einstellung aktiviert Phong Shading, welches glatterer und realistischer Beleuchtung erzeugt.\n\n[Empfehlung: Eigene Vorliebe]"
+#3006# "Speichere kompilierte Shader für Geschwindigkeit (Empfehlung)"
+#3007# "Verwende einen dauerhaften Speicher für kompilierte Shader Programme.\nJedes Spiel verwendet einen Satz an Combinern. Ein Combiner ist eine Gleichung, welche beschreibt wie aus verschiedenen Farbeingängen eine Ausgangsfarbe erzeugt wird. GLideN64 übersetzt und kompiliert Shader während der Laufzeit. Shader sind groß und komplex.Wenn ein Spiel mehrere neue Combiner verwendet dauert das kompilieren neuer Shader einige Zeit, was zu Stottern führen kann. Wenn diese einstellung ausgewählt ist werden diese Shader gesichert, damit sie beim nächsten Mal nicht neu kompiliert werden müssen.\n[Empfehlung: Ausgewählt]"
+#3008# "Interne Auflösung:"
+#3009# "Diese Einstellung legt die Render-Buffer-Größe der Ausgabe fest. Standardmäßig ist die Render-Buffer-Größe Wie die Auflösung der Ausgabe, oder alternativ auch die Original N64 Auflösung oder ein Vielfaches der N64 Auflösung."
+#3010# "Wie Ausgabeauflösung"
+#3011# "Originale N64 Auflösung (höchste Genauigkeit)"
+#3012# "Mehrfaches der N64 Auflösung:"
+#3013# "Gamma"
+#3014# "Gammakorrektur.\nEinige N64 Spiele verwenden Gammakorrektur. Gammakorrektur macht das Bild heller. Das N64 wendet Gammakorrektur in seinem Video Interface an. \nGLideN64 emuliert Gammakorrektur mit einem Nachbearbeitungseffekt. Das bedeutet, es funktioniert nur, wenn die Frame-Buffer-Emulation aktiviert ist. Gammakorrektur wird automatisch bei Spielen aktiviert, welche dieses Feature auf einem echten N64 verwenden. Du kannst Gammakorrektur für alle Spiele erzwingen. Der Standardwert für Gammakorrektur ist 2, wie auf einem N64.\n[Empfehlung: benutze Standardeinstellung]"
+#3015# "Benutzerdefinierte Gammakorrekturstufe:"
+#3016# "Die Auswahl dieser Option setzt die vom Spiel vorgegebene Gammakorrektur außer Kraft."
+#3017# "2D-Elemente"
+#3018# "Rendern von 2D-Elementen in N64-Auflösung (beste Qualität, kann langsam sein):"
+#3019# "Wenn diese Option ausgewählt ist, werden 2D Elemente in der originalen N64 Auflösung gezeichnet, bevor sie zur Ausgabe gegeben werden. Normalerweise werden durch diese Einstellung Anzeigeprobleme von 2D Elementen beseitigt. Die Ausführungsgeschwindigkeit kann aber beeinträchtigt werden. Diese Einstellung verwendet Heuristik um benachbarte 2D Elemente zu erkennen, welche nicht in jedem Spiel funktionieren.\n[Empfehlung: Ausgewählt, außer es bestehen Geschwindigkeitsprobleme]"
+#3020# "Deaktivieren"
+#3021# "Aktiviere optimiert"
+#3022# "Aktiviere nicht optimiert"
+#3023# "Versuche farbige Halos um transparente Objekte zu entfernen"
+#3024# "Beseitige schwarze Linien zwischen 2D Elementen:"
+#3025# "In einigen Spielen sind die Koordinaten von 2D Elemente nicht richtig ausgerichtet. Zwischen zwei benachbarten Elementen besteht eine Lücke von einem halben Pixel. Bei der originalen N64 Auflösung tritt dieses Problem nicht aus. Bei höheren Auflösungen ist aber eine schwarze Linie zwischen den Elementen sichtbar. Diese Einstellung verhindert schwarze Linien zwischen benachbarten 2D Elementen.\nFür benachbarte 2D Elemente: Wendet die Korrektur bei Polygonen an, welche sie benötigen. Bei auswählen, welche Probleme mit schwarzen Linien haben.\nImmer: Wende Korrektur bei allen 2D Elementen an. Wähle diese Einstellung aus, falls Für benachbarte 2D Elemente nicht hilft.\nNiemals: Keine Korrektur von schwarzen Linien zwischen 2D Elementen.\n[Empfehlung: Spielabhängig, in der Regel Niemals]"
+#3026# "Nur benachbarte 2D Elemente"
+#3027# "Immer"
+#3028# "Niemals"
+#3029# "Hintergrund-Renderingmodus (nur HLE):"
+#3030# "Hintergrund-Rendering ist ein komplexer Makrobefehl zum Rendern großer (normalerweise bildschirmfüllender) Bilder. Da Hintergrundbilder normalerweise nicht in den Texturspeicher passen, werden sie vom Mikrocode auf schmale Streifen aufgeteilt und einzeln gerendert. HLE-Code hat zwei Modi zur Emulation von Hintergrundbefehlen:\nAn einem Stück: Das gesamte Hintergrundbild wird als ein texturiertes Rechteck dargestellt. Diese Methode ist normalerweise viel schneller, aber das Ergebnis ist nicht immer korrekt.\nIn Streifen: Diese Methode emuliert Hintergrundbefehle so nah wie möglich zur tatsächlichen Mikrocode-Implementierung. Ist langsamer, aber präziser. Ein weiteres Problem: Bei einigen Spielen können Lücken zwischen den gerenderten Streifen in hoher Auflösung auftreten. Verwende die &quot;Rendern von 2D-Elementen in N64-Auflösung&quot; -Option zum Entfernen der Lücken.\n[Empfehlung: Spielabhängig, meistens in Streifen]"
+#3031# "An einem Stück"
+#3032# "In Streifen"
