GLideNUI-wtl: Add language for frame buffer

--- a/translations/wtl/gliden64_de.Lang
+++ b/translations/wtl/gliden64_de.Lang
@@ -98,3 +98,37 @@
 #3030# "Hintergrund-Rendering ist ein komplexer Makrobefehl zum Rendern großer (normalerweise bildschirmfüllender) Bilder. Da Hintergrundbilder normalerweise nicht in den Texturspeicher passen, werden sie vom Mikrocode auf schmale Streifen aufgeteilt und einzeln gerendert. HLE-Code hat zwei Modi zur Emulation von Hintergrundbefehlen:\nAn einem Stück: Das gesamte Hintergrundbild wird als ein texturiertes Rechteck dargestellt. Diese Methode ist normalerweise viel schneller, aber das Ergebnis ist nicht immer korrekt.\nIn Streifen: Diese Methode emuliert Hintergrundbefehle so nah wie möglich zur tatsächlichen Mikrocode-Implementierung. Ist langsamer, aber präziser. Ein weiteres Problem: Bei einigen Spielen können Lücken zwischen den gerenderten Streifen in hoher Auflösung auftreten. Verwende die &quot;Rendern von 2D-Elementen in N64-Auflösung&quot; -Option zum Entfernen der Lücken.\n[Empfehlung: Spielabhängig, meistens in Streifen]"
 #3031# "An einem Stück"
 #3032# "In Streifen"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Framebuffer emulieren"
+#4001# "Wenn diese Einstellung nicht ausgewählt ist, sind viele Effekte deaktiviert wie z.B. Kantenglättung, Beschneiden, Seitenverhältnis, N64 Auflösungsfaktor, N64-Style Tiefenvergleich und mehr. Diese Einstellung sollte nur deaktiviert werden, falls es Geschwindigkeitsprobleme gibt."
+#4002# "Kopiere den Hilfs-Farb-Buffer in den N64 Speicher (manchmal langsam, wenige Spielprobleme)"
+#4003# "Wenn diese Einstellung ausgewählt ist wird der Hilfs-Farb-Buffer, direkt nachdem er aktualisiert wurde, in den N64 Speicher geschrieben. Diese Einstellung hilft Frame-Buffer-Effekte in einigen Spielen richtig zu emulieren. Sie kann aber deutlich die Leistung reduzieren.\n[Empfehlung: Nicht ausgewählt]"
+#4004# "Frame-Bufferwechsel an:"
+#4005# "Die Einstellung legt fest, wie oft GLideN64 den Haupt-Frame-Buffer aktualisiert.\nVertikaler Interrupt: Aktualisiert den Buffer so schnell wie möglich, d.h. bei jedem vertikalen Interrupt in der Sekunde (50Hz für PAL und 60Hz für NTSC Spiele). Diese Einstellung hat die höchste Kompatibilität. Verwende diese Einstellung solange es keine Leistungseinbußen gibt.\nVI-Ursprungsänderung: Die VI-Ursprungsänderung korrespondiert mit den eigentlichen FPS eines Spiels. N64 Spiele laufen in der Regel mit 20 bis 30 FPS. Der Buffer wird nicht so oft wie beim ersten Modus aktualisiert. Dieser Modus funktioniert nicht bei Spielen, welche einen einzigen Buffer verwenden, was selten vorkommt.\nFarb-Buffer-Änderung: Diese Einstellung überprüft, ob sich der Frame-Buffer geändert hat. Bei einigen Spielen funktioniert diese Einstellung nicht."
+#4006# "Vertikaler Interrupt (empfohlen, wenigste Spielprobleme)"
+#4007# "VI Ursprung hat sich geändert (schneller, wenige Spielprobleme)"
+#4008# "Farbbuffer Änderung (am schnellsten, einige Spielprobleme)"
+#4009# "Benutze die Hilfe des Emulators zum Lesen/Schreiben des Frame-Buffers"
+#4010# "Einige Emulatoren erkennen nur schlecht, ob der Frame-Buffer gelesen oder geschrieben wurden. Die Erkennung des Emulators kann deaktiviert werden, damit GLideN64 selbst Frame-Buffer lesen und schreiben kann.\n[Empfehlung: Gewöhnlich nicht ausgewählt, aber manche Spiele laufen mit dieser Einstellung schneller]"
+#4011# "Lese Farb-Buffer in 4kB Stücken"
+#4012# "Wenn diese Einstellung ausgewählt ist, wird der Farb-Buffer in Stücken gelesen. Andernfalls wird der Buffer in einem Rutsch gelesen. Wenn ein Spiel den kompletten Buffer lesen muss, kann diese Einstellung zu Verzögerungen führen.\n[Empfehlung: Gewöhnlich nicht ausgewählt, weil der Farb-Buffer in der Regel komplett gelesen wird]"
+#4013# "Lese Depth-Buffer in 4kB Stücken"
+#4014# "Wenn diese Einstellung ausgewählt ist, wird der Depth-Buffer in Stücken gelesen. Andernfalls wird der Buffer in einem Rutsch gelesen. Wenn ein Spiel den kompletten Buffer lesen muss, kann diese Einstellung zu Verzögerungen führen.\n[Empfehlung: Ausgewählt, weil der Depth-Buffer in der Regel nicht komplett gelesen wird]"
+#4015# "Kopiere den Frame-Buffer der Grafikkarte in den N64 Speicher:"
+#4016# "Bei einigen Spielen kann GLideN64 nicht feststellen, ob der Frame-Buffer verwendet wird. Mit diesen Einstellungen kann festgelegt werde, ob GLideN64 jeden Frame des Grafikkarten-Frame-Buffers in den N64 Speicher kopiert.\nNiemals: Deaktivert das Kopieren des Grafikkarten-Buffers.\nSynchron: Effekte aller Spiele werden erkannt. Die Leistung kann beeinträchtigt werden. Verwende diese Einstellung für alle Spiele, welche mit Asynchron nicht funktionieren.\nAsynchron: Die Effekte der meisten Spiele werden erkannt.\n[Empfehlung: Asynchron]"
+#4017# "Niemals (am schnellsten, viele Spielprobleme)"
+#4018# "Synchron (am langsamsten, die wenigsten Spielprobleme)"
+#4019# "Asynchron (schnell, wenige Spielprobleme)"
+#4020# "Kopiere den Depth-Buffer der Grafikkarte in den N64 Speicher:"
+#4022# "Niemals (am schnellsten, die meisten Spielprobleme)"
+#4023# "Vom VRAM (langsam, einige Spielprobleme)"
+#4024# "In Software (schnell, am wenigsten Spielprobleme)"
+#4027# "Deaktivieren"
+#4030# "Tiefenpuffer löschen erzwingen"
+#4032# "Übergebe den N64 Frame-Buffer an die Ausgabe"
+#4033# "Wenn diese Einstellung ausgewählt ist, wird der Frame-Buffer direkt ausgegeben. Dies verhindert einige Grafikprobleme, kann aber zu Verzögerungen und visuellen Problemem führen.\n[Empfehlung: In der Regel nicht ausgewählt]"
+#4034# "Tiefe in Haupttiefenpuffer kopieren"
+#4035# "Diese Option ist für einige von der Reshade-Tiefe abhängige Effekte, wie SSAO und Tiefenschärfe, erforderlich.\n[Empfehlung: nur wenn du Reshade verwendest und tiefenabhängige Effekte benötigst]"
