--- a/translations/wtl/gliden64_es.Lang
+++ b/translations/wtl/gliden64_es.Lang
@@ -63,3 +63,34 @@
 #3026# "Para elementos en 2D adyacentes"
 #3027# "Siempre"
 #3028# "Nunca"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Emular frame buffer"
+#4001# "Al desactivar esta opción desactivarás muchos efectos, como el recorte de imagen, la proporción de aspecto, el factor de resolución de N64 y la comparación de profundidad al estilo de N64, entre otros. No desactives esta opción salvo que tengas problemas de rendimiento."
+#4002# "Copiar búfers auxiliares de color a la memoria de N64 (A veces va lento, puede dar problemas)"
+#4003# "Al activar esta opción,se copiará el búfer auxiliar de color a la memoria de N64 nada más sea renderizado. Permite emular correctamente los efectos basados en frame buffer de algunos juegos. Esta opción podría reducir visiblemente el rendimiento.\n[Recomendación: Por norma general desactivado]"
+#4004# "Actualización del frame buffer:"
+#4005# "Esta opción controla la frecuencia con la que GlideN64 actualizará el frame buffer principal.\nInterrupción vertical: Actualiza el búfer lo más rápido posible, en cada interrupción vertical por segundo (50 en juegos PAL y 60 en juegos NTSC). Es la opción más compatible. Utilízala salvo que tengas problemas de rendimiento.\nCambio en el origen de la VI: El origen del VI cambia en función de los FPS que tenga el juego. Los juegos de N64 suelen funcionar a una velocidad de entre 20 y 30 FPS, así que los búfers se actualizan menos que en el primer modo. Este modo no funciona en los juegos monobúfer, lo que es poco habitual.\nCambio en el búfer de color: Esta opción verifica que se haya cambiado el frame buffer. No funciona en algunos juegos."
+#4006# "Interrupción vertical (Recomendado, problemas mínimos)"
+#4007# "Cambio en el origen de la VI (Más rápido, da pocos problemas)"
+#4008# "Cambio en el búfer de color (Más rápido, da algunos problemas)"
+#4009# "Utilizar las ayudas del emulador para leer/escribir los frame buffers"
+#4010# "Algunos emuladores no son muy buenos a la hora de detectar el momento de leer o escribir en los frame buffers. Puedes desactivar la ayuda del emulador para que GlideN64 se encargue de leer y escribir los frame buffers por su cuenta.\n[Recomendación: Por norma general desactivado, aunque algunos juegos o emuladores pueden ir más rápidos si se deja activado]"
+#4011# "Leer el búfer de color por fragmentos de 4 KB"
+#4012# "Al activar esta opción, el búfer de color se leerá por fragmentos. En caso contrario, el búfer se leerá en su totalidad. Si algún juego necesita leer el búfer entero, esta opción podría ralentizarlo.\n[Recomendación: Por norma general desactivado, ya que suele leerse el búfer de color en su totalidad]"
+#4013# "Leer el búfer de profundidad por fragmentos de 4 KB"
+#4014# "Al activar esta opción, el búfer de profundidad se leerá por fragmentos. En caso contrario, el búfer se leerá en su totalidad. Si algún juego necesita leer el búfer entero, esta opción podría ralentizarlo.\n[Recomendación: Activado, ya que el búfer de profundidad no suele leerse en su totalidad]"
+#4015# "Copiar el frame buffer de la tarjeta gráfica a la memoria de N64:"
+#4016# "GlideN64 no podrá detectar el uso del frame buffer en algunos juegos. Con estas opciones podrás hacer que GlideN64 copie cada fotograma del frame buffer de tu tarjeta gráfica a la memoria de N64.\nNunca: No copiar los búfers de la tarjeta gráfica.\nSíncrono: Detecta los efectos de todos los juegos, pero puede ser lento. Utilízalo en los juegos en los que no funcione la opción «Asíncrono».\nAsíncrono: Detecta los efectos en casi todos los juegos.\n[Recomendación: Por norma general asíncrono]"
+#4017# "Nunca (Lo más rápido, da más problemas)"
+#4018# "Síncrono (Lo más lento, problemas mínimos)"
+#4019# "Asíncrono (Rápido, da pocos problemas)"
+#4020# "Copiar búfer de profundidad de la tarjeta gráfica a la memoria de N64:"
+#4022# "Nunca (Lo más rápido, lo más problemático)"
+#4023# "Copiar de la VRAM (Lento, da algunos problemas)"
+#4024# "Por software (Rápido, problemas mínimos)"
+#4027# "Desactivado"
+#4032# "Renderizar el frame buffer de N64 a la imagen"
+#4033# "Al activar esta opción se renderizará el frame buffer directamente en pantalla. Esto evita algunos problemas gráficos pero puede provocar ralentizaciones o problemas de calidad visual.\n[Recomendación: Por norma general desactivado]"
