--- a/translations/wtl/gliden64_fr.Lang
+++ b/translations/wtl/gliden64_fr.Lang
@@ -63,3 +63,34 @@
 #3026# "Pour les éléments 2D adjacents"
 #3027# "Toujours"
 #3028# "Jamais"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Émuler le Tampon Image"
+#4001# "Décocher cette option désactive de nombreux effets tels que le recadrage, le format d'écran, le facteur de résolution N64, la comparaison de profondeur de la N64 et autres. Veuillez ne pas décocher cette option sauf si vous avez des problèmes de performance."
+#4002# "Copier les tampons couleur auxiliaires vers la mémoire de la N64 (parfois lent, moins de problèmes en jeu)"
+#4003# "Quand l'option est cochée, le tampon couleur auxiliaire est copié vers la mémoire de la N64 juste après la restitution. Cette option aide à corriger des effets du tampon image dans quelques jeux. Cela peut réduire significativement les performances.\n[Recommandé : Généralement désactivé]"
+#4004# "Changer le tampon image :"
+#4005# "Cette option contrôle la fréquence de mise à jour du tampon image principal.\nÀ l'interruption verticale : Met à jour le tampon aussi rapidement que possible : à chaque interruption verticale par seconde (50 pour les jeux PAL et 60 pour les jeux NTSC). C'est l'option qui offre la meilleure compatibilité. Utilisez ce mode sauf si vous avez des problèmes de performance.\nAu changement d'origine VI : Le changement d'origine VI correspond au FPS actuel du jeu. Les jeux N64 tournent généralement entre 20 et 30 FPS donc le tampon change moins souvent que le premier mode. Il ne fonctionne pas pour les jeux qui utilisent une mise en tampon unique, ce qui est rare.\nAu changement du Tampon Couleur : Cette option vérifie si le tampon image a changé. Il y a quelques jeux où cela ne fonctionne pas."
+#4006# "À l'interruption verticale (recommandé, le moins de problèmes en jeu)"
+#4007# "Au changement d'origine VI (plus rapide, peu de problèmes en jeu)"
+#4008# "Au changement du Tampon Couleur (le plus rapide, quelques problèmes en jeu)"
+#4009# "Utiliser l'aide de l'émulateur pour lire/écrire dans le tampon image"
+#4010# "Certains émulateurs ne détectent pas ou mal quand lire/écrire dans le tampon image. Vous pouvez désactiver l'aide de l'émulateur pour laisser GLideN64 lire/écrire dans le tampon image.\n[Recommandé : Généralement désactivé, mais avec certains jeux/émulateurs les performances sont meilleures quand l'option est activée]"
+#4011# "Lire les tampons couleur par blocs de 4 Ko"
+#4012# "Quand l'option est activée, le tampon couleur sera lu par blocs. Sinon il sera lu dans son intégralité. Si un jeu a besoin de lire entièrement le tampon, sélectionner cette option peut réduire les performances.\n[Recommandé : Généralement désactivé, car le tampon de couleur est souvent lu dans son intégralité]"
+#4013# "Lire les tampons de profondeur par blocs de 4 Ko"
+#4014# "Quand l'option est activée, le tampon de profondeur sera lu par blocs. Sinon il sera lu dans son intégralité. Si un jeu a besoin de lire entièrement le tampon, sélectionner cette option peut réduire les performances.\n[Recommandé : Activé, car le tampon de profondeur n'est pas souvent lu dans son intégralité]"
+#4015# "Copier le tampon image de votre carte graphique vers la mémoire N64 :"
+#4016# "Dans certains jeux GLideN64 ne peut pas détecter l'utilisation du tampon image. Avec ces options, GLideN64 copie chaque image du tamon image de votre carte graphique vers la mémoire N64.\nJamais : Désactive la copie du tampon de votre carte graphique.\nSynchrone : Les effets sont détectés pour tous les jeux, mais cela peut être lent. Utilisez cette option pour les jeux où Asynchrone ne fonctionne pas.\nAsynchrone : Les effets sont détectés pour de nombreux jeux.\n[Recommandé : Généralement Asynchrone]"
+#4017# "Jamais (le plus rapide, nombreux problèmes en jeu)"
+#4018# "Synchrone (le plus lent, le moins de problèmes en jeu)"
+#4019# "Asynchrone (rapide, peu de problèmes en jeu)"
+#4020# "Copier le tampon de profondeur de votre carte graphique vers la mémoire N64 :"
+#4022# "Jamais (le plus rapide, le plus de problèmes en jeu)"
+#4023# "Depuis la VRAM (lent, quelques problèmes en jeu)"
+#4024# "Dans le logiciel (rapide, le moins de problèmes en jeu)"
+#4027# "Désactivé"
+#4032# "Restituer le tampon image N64 vers la sortie"
+#4033# "Quand cette option est activée, le tampon image est restitué directement vers l'écran. Cela permet de corriger certains problèmes graphiques mais peut causer des ralentissements et réduire la qualité visuelle.\n[Recommandé : Généralement désactivé]"
