--- a/translations/wtl/gliden64_it.Lang
+++ b/translations/wtl/gliden64_it.Lang
@@ -18,3 +18,8 @@
 #2011# "Adatta"
 #2030# "Filtro Anisotropico:"
 #2050# "Lingua:"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Emula il frame buffer"
