--- a/translations/wtl/gliden64_ja.Lang
+++ b/translations/wtl/gliden64_ja.Lang
@@ -21,3 +21,8 @@
 #2011# "引き伸ばし"
 #2030# "異方性フィルタリング:"
 #2050# "言語:"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "フレームバッファのエミュレート"
