--- a/translations/wtl/gliden64_pl.Lang
+++ b/translations/wtl/gliden64_pl.Lang
@@ -21,3 +21,8 @@
 #2011# "Rozciągnij"
 #2030# "Filtrowanie anizotropowe:"
 #2050# "Język:"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Emuluj bufor ramki"
