--- a/translations/wtl/gliden64_pt_BR.Lang
+++ b/translations/wtl/gliden64_pt_BR.Lang
@@ -21,3 +21,8 @@
 #2011# "Estendido"
 #2030# "Filtragem Anisotrópica:"
 #2050# "Língua:"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Emula frame buffer"
