--- a/translations/wtl/gliden64_en.Lang
+++ b/translations/wtl/gliden64_en.Lang
@@ -110,3 +110,43 @@
 #3030# "Background is a complex macro command used to render large (normally full screen) images. Since background images usually don't fit texture memory, the microcode splits them on narrow strips and renders them one by one. HLE code has two modes to emulate background commands:\nOne piece: The whole background image rendred as one textured rectangle. This method is normally much faster, but the result is not always correct.\nStripped: This method emulates background commands as close as possible to actual microcode implementation. It's slower but more precise. Another problem: some games may have gaps between rendered strips in high resolution. Use &quot;Render 2D elements in N64 resolution&quot; option to remove the gaps.\n[Recommended: Game dependent, mostly Stripped]"
 #3031# "One piece"
 #3032# "Stripped"
+
+/*********************************************************************************
+* Frame Buffer Tab                                                               *
+*********************************************************************************/
+#4000# "Emulate frame buffer"
+#4001# "Unchecking this option disables many effects including cropping, aspect ratio, N64 resolution factor, N64-style depth compare and more. Don't uncheck this option unless you have performance issues."
+#4002# "Copy auxiliary color buffers to N64 memory (sometimes slow, fewer game issues)"
+#4003# "When checked, the auxiliary color buffer is copied to N64 memory right after rendering to it is finished. This option helps to correctly emulate frame buffer effects in some games. This option may noticeably reduce performance.\n[Recommended: Usually unchecked]"
+#4004# "Frame buffer swap on:"
+#4005# "This option controls how often GLideN64 updates the main frame buffer.\nVertical interrupt: Update the buffer as quickly as possible, every vertical interrupt per second (50 for PAL and 60 for NTSC games). This option is the most compatible. Use this mode unless you have performance problems.\nVI origin change: The VI origin changes corresponding to the game's actual FPS. N64 games typically run between 20 to 30 FPS so the buffers swap less often than the first mode. This mode does not work for games that use single buffering, which is rare.\nColor buffer change: This option checks to see if the frame buffer has been changed. There are some games where this doesn't work."
+#4006# "Vertical interrupt (recommended, fewest game issues)"
+#4007# "VI origin change (faster, few game issues)"
+#4008# "Color buffer change (fastest, some game issues)"
+#4009# "Use emulator help to read/write frame buffers"
+#4010# "Some emulators do a poor job of detecting when to read/write frame buffers. You can disable emulator help to let GLideN64 read/write frame buffers itself.\n[Recommended: Usually unchecked, but for some games/emulators it may be faster checked]"
+#4011# "Read color buffer in 4 KB chunks"
+#4012# "When checked, the color buffer will be read in chunks. Otherwise, the buffer will be read in its entirety. If a game needs to read the entire buffer, selecting this option may be slow.\n[Recommended: Usually unchecked, because the color buffer is usually read entirely]"
+#4013# "Read depth buffer in 4 KB chunks"
+#4014# "When checked, the depth buffer will be read in chunks. Otherwise the buffer will be read in its entirety. If a game needs to read the entire buffer, selecting this option may be slow.\n[Recommended: Checked, because the depth buffer is not often read entirely]"
+#4015# "Copy video card frame buffer to N64 memory:"
+#4016# "In some games GLideN64 can't detect when the game uses the frame buffer. With these options, you can have GLideN64 copy each frame of your video card's frame buffer to N64 memory.\nNever: Disable copying buffers from video card.\nSynchronous: Effects are detected for all games, but it can be slow. Use for games where Asynchronous doesn't work.\nAsynchronous: Effects are detected for most games.\n[Recommended: Usually Asynchronous]"
+#4017# "Never (fastest, many game issues)"
+#4018# "Synchronous (slowest, fewest game issues)"
+#4019# "Asynchronous (fast, few game issues)"
+#4020# "Copy video card depth buffer to N64 memory:"
+#4021# "The depth buffer is used to emulate some effects (e.g. coronas):\nNever: Depth buffer is disabled.\nFrom VRAM: Your video card's depth buffer is copied to N64 memory each frame, which can be slow on some games.\nIn software: Generally faster than copying from VRAM, but the result can be imperfect.\n[Recommended: In software]"
+#4022# "Never (fastest, most game issues)"
+#4023# "From VRAM (slow, some game issues)"
+#4024# "In software (fast, fewest game issues)"
+#4025# "N64-style depth compare (experimental, disables MSAA)"
+#4026# "The N64 uses a unique method of calculating depth to the camera. When enabled, GlideN64 uses shaders to try to emulate these calculations correctly. Not compatible with anti-aliasing. Experimental!\nFast mode requires OpenGL 4.2 and fragment shader interlock extensions.\nCompatible mode requires only core OpenGL 4.2 Can be slow!\n[Recommended: Sometimes checked, for several games]"
+#4027# "Disable"
+#4028# "Fast"
+#4029# "Compatible"
+#4030# "Force depth buffer clear"
+#4031# "Enable force depth buffer clear. A hack. Necessary for Eikou no Saint Andrews.\n[Recommended: except for Eikou no Saint Andrews]"
+#4032# "Render N64 frame buffer to output"
+#4033# "When this option is checked, the frame buffer is rendered directly to the screen. This prevents some graphic problems but may cause slowdowns or visual quality problems.\n[Recommended: Usually unchecked]"
+#4034# "Copy depth to main depth buffer"
+#4035# "This option is required for some Reshade depth dependant effects, such as SSAO and depth of field.\n[Recommended: only if you use Reshade and need depth dependant effects]"
